scss/style.scss
/* ... */
#main
{
	.innerarea
	{
		margin-top : vw(1154, 1920);

		@media screen and (max-width: 767px) {
			margin-top : vw(1300, 390);
		}
	}
	
	.infoarea
	{
		margin-bottom : 100px;

		@media screen and (max-width: 767px) {
			margin-bottom : 200px;
		}

		.contents
		{
			margin-top    : 20px;
			margin-bottom : 20px;

			.text
			{
				margin-bottom : 10px;
			}
		}
	}

	.timetablearea
	{
		margin-bottom : 100px;

		@media screen and (max-width: 767px) {
			margin-bottom : 200px;
		}

		img
		{
			width  : 100%;
			height : auto;
		}
	}

	.performersarea
	{
		margin-bottom : 200px;

		.heading
		{
			margin-bottom : 30px;
		}

		.performers
		{
			display               : grid;
			grid-template-columns : repeat(2, 1fr);
			row-gap               : 4.6875%;
			column-gap            : 7.8125%;

			@media screen and (max-width: 767px) {
				grid-template-columns : repeat(1, 1fr);
				row-gap               : vw(90, 390);
				column-gap            : vw(90, 390);
			}

			.content
			{
				width : vw(650, 1920);
				max-width : 650px;

				@media screen and (max-width: 767px) {
					width : 100%;
				}

				.imagearea
				{
					width           : 100%;
					height          : vw(270, 1920);
					max-height      : 270px;

					padding         : 0 vw(120, 1920);

					text-align      : center;
					justify-content : space-between;

					@media screen and (max-width: 767px) {
						padding : 0;

						height   : vw(190, 390);
						max-height : 190px;
					}
					
					&.onePieceImage
					{
						img
						{
							width  : vw(270, 1920);
							max-width : 270px;
							height : auto;

							@media screen and (max-width: 767px) {
								width : vw(190, 390);
								max-width : 190px;
							}
						}
					}

					&.twoPieceImage
					{
						display         : flex;
						justify-content : space-between;

						img
						{
							width  : vw(202, 1920);
							max-width : 202px;
							height : auto;

							@media screen and (max-width: 767px) {
								width : vw(154, 390);
								max-width : 154px;
							}
						}

						.image1
						{
							align-self : flex-start;
						}

						.image2
						{
							align-self : flex-end;
						}
					}
					&.threePieceImage
					{
						display         : flex;
						justify-content : space-between;

						img
						{
							width  : vw(135, 1920);
							max-width : 135px;
							height : auto;

							@media screen and (max-width: 767px) {
								width : vw(102, 390);
								max-width : 102px;
							}
						}

						.image1
						{
							align-self : flex-start;
						}

						.image2
						{
							align-self : center;
						}

						.image3
						{
							align-self : flex-end;
						}
					}
				}

				.title
				{
					margin-top    : 20px;
					margin-bottom : 10px;
					font-family   : var(--font-performer-title);
				}

				.tagarea
				{
					display       : flex;
					flex-wrap     : wrap;
					gap           : 6px;

					margin-bottom : 10px;

					.tag
					{
						display       : inline-block;

						padding       : 2px 10px;

						border        : 1px solid var(--color-text);
						border-radius : 100px;

						font-size     : 12px;
						line-height   : 1.5;
						color         : var(--color-text);

						white-space   : nowrap;
					}
				}
			}
		}
	}

	#footer
	{
		@extend .fs_20;
		text-align : center;

		@media screen and (max-width: 767px) {
			font-size : 14px !important;
			margin-top : 50px;
		}
	}
}

